--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,3 +1,35 @@
 .wrapper {
   padding: 20px;
 }
+
+header {
+  text-align: center;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+header nav a {
+  text-decoration: none;
+}
+
+header nav div {
+  font-size: larger;
+  background-color: darkblue;
+  color: white;
+  width: 200px;
+  border-radius: 7px;
+  transition: background-color 0.2s, color 0.2s;
+  padding: 10px;
+}
+
+header nav div:hover {
+  background-color: burlywood;
+  color: black;
+  cursor: pointer;
+  /* also change color of a tags */
+}
