--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -32,3 +32,7 @@ header nav div:hover {
   color: black;
   cursor: pointer;
 }
+
+.question-table-row:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
