--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
 body {
   background-color: #072227;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 .wrapper {
   padding: 20px;
